--- a/src/main/resources/iouWeb/index.html
+++ b/src/main/resources/iouWeb/index.html
@@ -21,6 +21,7 @@
     <script src="js/issueCashModal.js"></script>
     <script src="js/transferModal.js"></script>
     <script src="js/settleModal.js"></script>
+    <script src="js/sellModal.js"></script>
 </head>
 <!--script>var todayDate= new Date().toISOString().slice(0,10);
 document.getElementById("txndate").innerHTML=todayDate;z
@@ -34,8 +35,10 @@ document.getElementById("txnid").innerHTML=todayDate;
         <div class="navbar-header">
             <a class="navbar-brand" href="#">{{demoApp.thisNode}}</a>
         </div>
-        <button ng-click="demoApp.openCreateIOUModal()" type="button" class="btn btn-primary navbar-btn">Trade</button>
-        <!-- <button ng-click="demoApp.openIssueCashModal()" type="button" class="btn btn-primary navbar-btn">Issue cash</button> -->
+        <button ng-click="demoApp.openCreateIOUModal()" type="button" class="btn btn-primary navbar-btn">Buy</button>
+        <button ng-click="demoApp.opensellModal()" type="button" class="btn btn-primary navbar-btn">Sell</button>
+
+      <!--  <button type="button" class="btn btn-primary navbar-btn">Sell</button>-->
         <button ng-click="demoApp.refresh()" type="button" class="btn btn-default navbar-btn"><span
                 class="glyphicon glyphicon-refresh"></span></button>
     </div>
@@ -59,15 +62,15 @@ document.getElementById("txnid").innerHTML=todayDate;
                     <option value="LUKT01">LUKT01</option>
                 </select>
             </div>
-            <div class="form-group">
+<!--            <div class="form-group">
                 <label for="createIOUCurrency" class="control-label">Transaction_Type:</label>
                 <select id="createIOUCurrency" ng-model="createIOUModal.form.transactionType">
-                   <!-- <option value="TEST">TEST</option>      <!--creating a dummy attribute -->
+                   &lt;!&ndash; <option value="TEST">TEST</option>      &lt;!&ndash;creating a dummy attribute &ndash;&gt;
                     <option value="SUBSCRIPTION">SUBSCRIPTION</option>
-                    <option value="REDEMPTION">REDEMPTION</option>
+                   &lt;!&ndash; <option value="REDEMPTION">REDEMPTION</option>&ndash;&gt;
                 </select>
-               <!-- <input type="text" ng-model="createIOUModal.form.currency" class="form-control" id="createIOUCurrency"> -->
-            </div>
+               &lt;!&ndash; <input type="text" ng-model="createIOUModal.form.currency" class="form-control" id="createIOUCurrency"> &ndash;&gt;
+            </div>-->
             <div class="form-group">
                 <label for="createIOUAmount" class="control-label">Amount:</label>
                 <input type="text" ng-model="createIOUModal.form.amount" class="form-control" id="createIOUAmount">
@@ -93,6 +96,53 @@ document.getElementById("txnid").innerHTML=todayDate;
         {{ createIOUMsgModal.message }}
     </div>
 </script>
+
+<!--This is done to create a GUI to sell the funds -->
+
+<script type="text/ng-template" id="sellModal.html">
+    <div class="modal-header">
+        <h4 class="modal-title">Sell your fund</h4>
+    </div>
+    <form>
+        <div class="modal-body">
+            <div class="form-group">
+                <label for="sellIOUCounterparty" class="control-label">Fund Id:</label>
+                <select id="sellIOUCounterparty" ng-model="sellModal.form.fundId">
+                    <option value="HKIV01">HKIV01</option>
+                    <option value="DBKS01">DBKS01</option>
+                    <option value="DBKS02">DBKS02</option>
+                    <option value="LUKT01">LUKT01</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="createIOUUNits" class="control-label">Units:</label>
+                <input type="text" ng-model="sellModal.form.units" class="form-control" id="createIOUUNits">
+            </div>
+            <div ng-show="false" class="form-group">
+                <div class="alert alert-danger" role="alert">
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    <span class="sr-only">Error:</span>
+                    Enter valid sell creation parameters
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="modal-footer">
+            <button ng-click="sellModal.cancel()" type="button" class="btn btn-default">Close</button>
+            <button ng-click="sellModal.cancel()" type="button" class="btn btn-default">Close</button>
+            <button ng-click="sellModal.create()" type="button" class="btn btn-primary">Sell Trade</button>
+        </div>
+    </form>
+</script>
+
+<script type="text/ng-template" id="sellMsgModal.html">
+    <div class="modal-body" id="sell-iou-modal-body">
+        {{ sellModal.message }}
+    </div>
+</script>
+
+
+<!--                                                        -->
 
 <script type="text/ng-template" id="issueCashModal.html">
     <div class="modal-header">
@@ -222,10 +272,57 @@ document.getElementById("txnid").innerHTML=todayDate;
 
 <!--<div class="row"/>-->
 
-<!-- This is where it was earlier -->
+<!--  To get the total portfolio for that particular investor     -->
 <div class="row" >
     <div class="col-md-1"></div>
     <div class="col-md-10" style="width:100%;margin-top:100px;">
+        <div ng-show="!demoApp.ious.length" class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">fdf</h3>
+            </div>
+            <div class="panel-body">sexy</div>
+        </div>
+        <div ng-show="demoApp.ious.length" class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Pending Transaction Summary:</h3>
+            </div>
+            <div class="panel-body">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Fund ID</th>
+                        <th>Total Holding</th>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr  >
+                        <td class="vert-align"></td>
+                        <td class="vert-align">{{demoApp.holding.split(',')}}</td>
+                        <td class="vert-align"></td>
+                        <!-- <td class="vert-align">{{iou.paid}}</td>-->
+                       <!-- <td>
+                            <div class="btn-group" role="group">
+                                <button ng-show="demoApp.thisNode=='CN=TA,O=NodeA'" ng-click="demoApp.openTransferModal(iou.linearId.id)" type="button" class="btn btn-primary">Update Kyc
+                                </button>
+                                &lt;!&ndash;<button ng-click="demoApp.openSettleModal(iou.linearId.id)" type="button" class="btn btn-primary">Settle
+                                </button>&ndash;&gt;
+                            </div>
+                        </td>-->
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
+</div>
+
+
+<!-- This is where it was earlier -->
+<div class="row" >
+    <div class="col-md-1"></div>
+    <div class="col-md-10" style="width:100%">
         <div ng-show="!demoApp.ious.length" class="panel panel-primary">
             <div class="panel-heading">
                 <h3 class="panel-title">There are no recorded Trades</h3>
@@ -357,7 +454,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                         <!-- <td class="vert-align">{{iou.paid}}</td>-->
                         <td>
                             <div class="btn-group" role="group">
-                                <button ng-click="demoApp.openSettleModal(iou.linearId.id)" type="button" class="btn btn-primary">Update NAV
+                                <button ng-show="demoApp.thisNode=='CN=TA,O=NodeA'" ng-click="demoApp.openSettleModal(iou.linearId.id)" type="button" class="btn btn-primary">Update NAV
                                 </button>
                                 <!--<button ng-click="demoApp.openSettleModal(iou.linearId.id)" type="button" class="btn btn-primary">Settle
                                 </button>-->
@@ -432,7 +529,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                         <!-- <td class="vert-align">{{iou.paid}}</td>-->
                         <td>
                             <div class="btn-group" role="group">
-                                <button ng-click="demoApp.openIssueCashModal(iou.linearId.id)" type="button" class="btn btn-primary">Update Amount
+                                <button ng-show="demoApp.thisNode=='CN=TA,O=NodeA'" ng-click="demoApp.openIssueCashModal(iou.linearId.id)" type="button" class="btn btn-primary">Update Amount
                                 </button>
                                 <!--<button ng-click="demoApp.openSettleModal(iou.linearId.id)" type="button" class="btn btn-primary">Settle
                                 </button>-->
@@ -506,7 +603,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                         <!-- <td class="vert-align">{{iou.paid}}</td>-->
                         <td>
                             <div class="btn-group" role="group">
-                                <button ng-click="demoApp.openIssueCashModal(iou.linearId.id)" type="button" class="btn btn-primary">Update Amount
+                                <button ng-show="demoApp.thisNode=='CN=TA,O=NodeA'" ng-click="demoApp.openIssueCashModal(iou.linearId.id)" type="button" class="btn btn-primary">Update Amount
                                 </button>
                                 <!--<button ng-click="demoApp.openSettleModal(iou.linearId.id)" type="button" class="btn btn-primary">Settle
                                 </button>-->
