--- a/src/main/resources/iouWeb/index.html
+++ b/src/main/resources/iouWeb/index.html
@@ -129,7 +129,7 @@ document.getElementById("txnid").innerHTML=todayDate;
         </div>
         <div class="modal-footer">
             <button ng-click="sellModal.cancel()" type="button" class="btn btn-default">Close</button>
-            <button ng-click="sellModal.cancel()" type="button" class="btn btn-default">Close</button>
+            <!--<button ng-click="sellModal.cancel()" type="button" class="btn btn-default">Close</button>-->
             <button ng-click="sellModal.create()" type="button" class="btn btn-primary">Sell Trade</button>
         </div>
     </form>
@@ -297,8 +297,20 @@ document.getElementById("txnid").innerHTML=todayDate;
                     </thead>
                     <tbody>
                     <tr  >
-                        <td class="vert-align"></td>
-                        <td class="vert-align">{{demoApp.holding.split(',')}}</td>
+                        <td class="vert-align">HKIV01</td>
+                        <td class="vert-align">{{demoApp.holding.split(',')[0]}}</td>
+                      <!--  <td class="vert-align"></td>-->
+
+                        <td class="vert-align">DBKS01</td>
+                        <td class="vert-align">{{demoApp.holding.split(',')[1]}}</td>
+                        <!--<td class="vert-align"></td>-->
+
+                        <td class="vert-align">DBKS02</td>
+                        <td class="vert-align">{{demoApp.holding.split(',')[2]}}</td>
+                        <!--<td class="vert-align"></td>-->
+
+                        <td class="vert-align">LUKT01</td>
+                        <td class="vert-align">{{demoApp.holding.split(',')[3]}}</td>
                         <td class="vert-align"></td>
                         <!-- <td class="vert-align">{{iou.paid}}</td>-->
                        <!-- <td>
