--- a/src/main/resources/iouWeb/TransferAgent.html
+++ b/src/main/resources/iouWeb/TransferAgent.html
@@ -357,9 +357,9 @@ document.getElementById("txnid").innerHTML=todayDate;
                             <thead>
                             <tr>
                                 <th>Fund ID</th>
-                                <th>Total Holding</th>
-                                <th>Blocked Holding</th>
-                                <th>Current Holding</th>
+                                <th>Total Units</th>
+                                <th>Blocked Units</th>
+                                <th>Available Units</th>
 
                             </tr>
                             </thead>
@@ -432,7 +432,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <th>Investor ID</th>
                                 <th>Fund</th>
                                 <th>Total Amount </th>
-                                <th>Total Units</th>
+                                <th>Total Units</th> 
                                 <th>Percentage</th>
 
                             </tr>
