--- a/src/main/resources/iouWeb/investor.html
+++ b/src/main/resources/iouWeb/investor.html
@@ -414,7 +414,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                 </div>
 
             <!-- This is where Rohan has started -->
-            <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+            <!--<div class="demo-charts mdl-color&#45;&#45;white mdl-shadow&#45;&#45;2dp mdl-cell mdl-cell&#45;&#45;12-col mdl-grid">
 
                 <div ng-show="!demoApp.ious.length" class="panel panel-primary">
                     <div class="panel-heading">
@@ -445,7 +445,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <td ng-show="demoApp.register.split(',')[3]!='0.0'"  class="vert-align">{{demoApp.register.split(',')[3]}}</td>
                                 <td ng-show="demoApp.register.split(',')[3]!='0.0'"  class="vert-align">{{demoApp.register.split(',')[4]}}</td>
                                 <td ng-show="demoApp.register.split(',')[3]!='0.0'"  class="vert-align">{{demoApp.register.split(',')[5]}}</td>
-                                <!--  <td class="vert-align"></td>-->
+                                &lt;!&ndash;  <td class="vert-align"></td>&ndash;&gt;
                             </tr>
                             <tr>
                                 <td ng-show="demoApp.register.split(',')[9]!='0.0'" class="vert-align">{{demoApp.register.split(',')[6]}}</td>
@@ -453,7 +453,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <td ng-show="demoApp.register.split(',')[9]!='0.0'" class="vert-align">{{demoApp.register.split(',')[9]}}</td>
                                 <td ng-show="demoApp.register.split(',')[9]!='0.0'" class="vert-align">{{demoApp.register.split(',')[10]}}</td>
                                 <td ng-show="demoApp.register.split(',')[9]!='0.0'" class="vert-align">{{demoApp.register.split(',')[11]}}</td>
-                                <!--<td class="vert-align"></td>-->
+                                &lt;!&ndash;<td class="vert-align"></td>&ndash;&gt;
                             </tr>
                             <tr>
 
@@ -462,7 +462,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <td ng-show="demoApp.register.split(',')[15]!='0.0'" class="vert-align">{{demoApp.register.split(',')[15]}}</td>
                                 <td ng-show="demoApp.register.split(',')[15]!='0.0'" class="vert-align">{{demoApp.register.split(',')[16]}}</td>
                                 <td ng-show="demoApp.register.split(',')[15]!='0.0'" class="vert-align">{{demoApp.register.split(',')[17]}}</td>
-                                <!--<td class="vert-align"></td>-->
+                                &lt;!&ndash;<td class="vert-align"></td>&ndash;&gt;
                             </tr>
                             <tr>
 
@@ -504,22 +504,22 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <td ng-show="demoApp.register.split(',')[45]!='0.0'" class="vert-align">{{demoApp.register.split(',')[46]}}</td>
                                 <td ng-show="demoApp.register.split(',')[45]!='0.0'" class="vert-align">{{demoApp.register.split(',')[47]}}</td>
                             </tr>
-                            <!-- <td class="vert-align">{{iou.paid}}</td>-->
-                            <!-- <td>
+                            &lt;!&ndash; <td class="vert-align">{{iou.paid}}</td>&ndash;&gt;
+                            &lt;!&ndash; <td>
                                  <div class="btn-group" role="group">
                                      <button ng-show="demoApp.thisNode=='CN=TA,O=NodeA'" ng-click="demoApp.openTransferModal(iou.linearId.id)" type="button" class="btn btn-primary">Update Kyc
                                      </button>
                                      &lt;!&ndash;<button ng-click="demoApp.openSettleModal(iou.linearId.id)" type="button" class="btn btn-primary">Settle
                                      </button>&ndash;&gt;
                                  </div>
-                             </td>-->
+                             </td>&ndash;&gt;
                             </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
                 <div class="col-md-1"></div>
-            </div>
+            </div>-->
         </div>
 
             <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
